spacing fixes to midd header

--- a/src/scss/components/_midd-header.scss
+++ b/src/scss/components/_midd-header.scss
@@ -43,64 +43,70 @@
   }
 }
 
-.midd-header__logo {
-  // padding-top: spacing(2);
-  // padding-bottom: spacing(2);
+.midd-header__primary {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.midd-header__secondary {
+  display: none;
+  flex-direction: column-reverse;
+  padding-top: spacing(5);
+
+  &.is-toggled {
+    display: flex;
+  }
 
   @include media(md) {
-    // padding-top: spacing(3);
-    // padding-bottom: spacing(3);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding-top: 0;
+  }
+}
+
+.midd-header__logo {
+  height: 48px;
+  @include media(md) {
+    height: 64px;
   }
 }
 
 .midd-header__shield {
   width: 44px;
   position: relative;
+  left: 0;
   top: 8px;
-
-  // margin-bottom: -10px;
-  // margin-top: 8px;
 
   @include media(md) {
     width: 67px;
-    // top: 16px;
-    // margin-bottom: -28px;
-    // margin-top: -3px;
-
-    .midd-header--transparent & {
-      // margin-bottom: 0;
-      // margin-top: 0;
-    }
   }
 }
 
 .midd-header__wordmark {
   width: 76px;
   position: relative;
-  // top: 18px;
-  margin-left: 8px;
+  left: 4px;
+  top: 0;
 
   @include media(md) {
     width: 114px;
-
-    .midd-header--transparent & {
-      margin-left: 0;
-    }
+    left: 8px;
   }
 }
 
-.midd-header__primary {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .midd-header__button {
-  color: $white;
-  padding: spacing(3);
   display: inline-block;
-  margin: -#{spacing(3)};
+  color: $white;
+  font-size: typescale(2);
+  font-weight: $font-weight-semibold;
+  line-height: $line-height-solid;
+  margin-right: -#{spacing(3)};
+  padding: spacing(3);
 
+  &:hover,
   &:active,
   &:focus {
     text-decoration: none;
@@ -125,22 +131,6 @@
   display: none;
   .midd-header__button.is-toggled & {
     display: inline-block;
-  }
-}
-
-.midd-header__secondary {
-  display: none;
-  flex-direction: column-reverse;
-  padding-top: spacing(5);
-
-  &.is-toggled {
-    display: flex;
-  }
-
-  @include media(md) {
-    display: flex;
-    flex-direction: row;
-    padding-top: 0;
   }
 }
 
